# routes/form_info.js
@@ -1,73 +1,65 @@
-
 const respSchema=require('../models/responseSchema');
 const consumerSchema= require('../models/consumerSchema')
 const express = require('express');
 const router=express.Router();
 const fetch = require('node-fetch');
-const helper = require('../util/apiUtils').check_for_required_labels;
-const dashHit = require('../middleWareFun/dashboardHit');
-const dataXT = require('../middleWareFun/formDataExtracter');
-const GSheet = require('../middleWareFun/googleSheetMaker');
-const Switcher = require('../middleWareFun/switcher');
+const verify = require('../middleWareFun/check_form_author');
+const env = process.env.NODE_ENV || 'development';
+const config = require('../config/config')[env];
+const apiUtils = require('../util/apiUtils');
+const HttpStatus = require('http-status-codes');
+const logger = require('../util/logger');
+const errorMessages = require('../util/errorMessages');
 
-router.get('/myforms',async (req,res)=>{
-    const {key} = req.query;
-    const token = req.headers['access-token'];
-    // console.log("My key --", key);
-    if(key==undefined && token == undefined){
-        return res.status(401).json({"msg":"Unauthorized"})
+router.get('/myforms', (req,res)=>{
+  logger.debug('inside my forms');
+  const token = req.headers['access-token'];
+  const url = apiUtils.createUrl(config.FORM_SERVICE_BASE_URL,`/forms/user?token=${token}`);
+  fetch(url)
+  .then(res => {
+    if(res.status==HttpStatus.OK){
+      logger.debug('forms fetched');
+      return res.json();
+    }else{
+      logger.error(errorMessages.FORM_NOT_FOUND);
+      return Promise.reject(errorMessages.FORM_NOT_FOUND);
     }
-    else{
-      if( key == undefined  ) {
-        const url = `http://localhost:8000/forms/user?token=${token}`;
-        const response = await fetch(url);
-        if(response.ok){
-            const data = await response.json()
-            return res.json({form:data.forms})
-        }
-        else{
-            return res.status(response.status).json({"msg":"Token not recognized"})
-        }
-      }
-      else{
-        const url = `http://localhost:8000/forms/user?key=${key}`;
-        const response = await fetch(url);
-        if(response.ok){
-            const data = await response.json()
-            return res.json({form:data.forms})
-        }
-        else{
-            return res.status(response.status).json({"msg":"Token not recognized"})
-        }
-      }
-    }
+  })
+  .then(data =>{
+    return res.json({form:data.forms})
+  })
+  .catch(err => {
+    logger.error('forms not fetched of current user');
+    return res.status(HttpStatus.NOT_FOUND).json(apiUtils.getError('forms not fetched',HttpStatus.NOT_FOUND));
+  })
 })
-
-                                              
-router.delete('/forms/delete',dashHit,(req,res)=>{
+                                         
+router.delete('/forms/delete',verify,(req,res)=>{
     const formId = req.body.formId;
- 
-  fetch(`http://localhost:8000/forms/delete/${formId}`)
-  .then(
-    function(response) {
-      if (response.ok) {
-        response.json().then(function(data) {
-          respSchema.deleteMany({"formId":formId}).then(result=>{
-            consumerSchema.deleteOne({"formId":formId}).then(result=>{
-              res.status(200).json({status:"Deleted"});
+    fetch(apiUtils.createUrl(config.FORM_SERVICE_BASE_URL,`/forms/delete/${formId}`))
+    .then(
+      function(response) {
+        if (response.ok) {
+          logger.debug('form template deleted of formId : '+formId);
+          response.json().then(function(data) {
+            respSchema.deleteMany({formId}).then(result=>{
+              logger.debug('all responses deleted of formid : '+formId);
+              consumerSchema.deleteOne({formId}).then(result=>{
+                logger.debug('all consumers deleted of formid : '+formId);
+                res.status(HttpStatus.OK).json(apiUtils.getResponse('form foot prints removed'));
+              })
             })
-          })
-        });
-      } else {
-          res.status(response.status).json({msg:"not found"});
-        }
-    }
-  )
-  .catch(function(err) {
-    res.status(500).json({msg:"internal server error"});
-  });
-  });
-
-
+          });
+        } else {
+            logger.error(errorMessages.FORM_NOT_FOUND);
+            res.status(response.status).json(apiUtils.getError(errorMessages.FORM_NOT_FOUND,response.status));
+          }
+      }
+    )
+    .catch(function(err) {
+      logger.error('form foot print not deleted due to '+err);
+      res.status(HttpStatus.INTERNAL_SERVER_ERROR).json(apiUtils.getError('form not deleted :: '+err, HttpStatus.INTERNAL_SERVER_ERROR))
+    });
+});
 
 module.exports = router;
