# routes/response_info.js
@@ -1,42 +1,43 @@
 const respSchema=require('../models/responseSchema');
-const consumerSchema= require('../models/consumerSchema')
 const express = require('express');
 const router=express.Router();
 const fetch = require('node-fetch');
 const helper = require('../util/apiUtils').check_for_required_labels;
-router.delete("/delete/response",[dashHit], async (req, res) => {
-    const formId = req.body.form_id;
-    const responseId = req.body.response_id
-    const token = req.headers['access-token'];
-    if(req.formData.length){
-      req.formData.forEach(async e => {
-        if(e.form_id == formId) {
-          await respSchema.findOneAndDelete({"_id":responseId}, (err, data) => {
-            if(err || data == null)
-              return res.status(404).json({"msg":"Response not found"});
-            else
-              return res.status(200).json({status:"Deleted", "Deleted_response": data});
-          })
-        }
-      });
-    }
-    else
-      return res.status(response.status).json({"msg":"Form not found"});
-  });
-  //now we want that particular response info get 
-router.get('/get/response/:responseId',async (req,res)=>{
+const verify = require('../middleWareFun/check_form_author');
+const globalConstant = require('../util/globalConstant');
+const logger = require('../util/logger');
+const apiUtils = require('../util/apiUtils');
+const HttpStatus = require('http-status-codes');
+const env = process.env.NODE_ENV || 'development';
+const config = require('../config/config')[env];
 
-    const responseId = req.params.responseId;
-    try {
-        var response = await respSchema.findOne({"_id": responseId});
-    } catch (error) {
-        var response = null;
+router.delete("/delete/response",verify,(req, res) => {
+  const responseId = req.body.response_id;
+  const {formId} = req.body;
+  logger.debug(`deleting response with responseId : ${responseId}`);
+  respSchema.deleteOne({[globalConstant.UNDERSCORE_ID]:responseId,formId})
+  .then(response =>{
+    if(response.n){
+      logger.debug('response deleted successfully');
+      res.json(apiUtils.getResponse('response deleted successfully',HttpStatus.OK));
+    }else{
+      logger.error('response not found');
+      return Promise.reject('response not found');
     }
-    
-    
-    if(response===null){
-        return res.status(404).json({'Status':'Not Found Error'});
-    }
+  })
+  .catch(err => {
+    logger.error('response not deleted due to '+err);
+    res.json(apiUtils.getResponse('response not deleted due to '+err,HttpStatus.OK));
+  })
+});
+
+router.get('/get/response/:responseId',verify, (req,res)=>{
+  logger.debug('inside get responses');
+  const responseId = req.params.responseId;
+  const formId = req.query.formId;
+  respSchema.findOne({[globalConstant.UNDERSCORE_ID]:responseId,formId})
+  .then(response =>{
+    logger.debug('responses found');
     const section = response.sections;
     let fieldArray  = [];
     section.map(s => {
@@ -44,24 +45,21 @@ router.get('/get/response/:responseId',async (req,res)=>{
         fieldArray.push(f);
       })
     })
-    res.status(200).json({"response":fieldArray});
+    res.status(HttpStatus.OK).json({"response":fieldArray});
+  })
+  .catch(err =>{
+    logger.error('response not found '+err);
+    res.status(HttpStatus.NOT_FOUND).json(apiUtils.getResponse('response not found '+err,HttpStatus.NOT_FOUND))
+  })
   
-  });
+});
 
-/*curl -X PUT -H "Content-Type: application/json" -d '{"data":[{ "is_choice":true,"skills":{"c":1,"python":1,"ruby":0} }]}' http://localhost:5003/api/response/5f80c8321d4dcf2434a9a0c5
-*/
-router.put("/response/:responseId", async (req, res) => {
-  const responseId = req.params.responseId; 
-  const response = await respSchema.update({"_id": responseId},{$push:{"sections":req.body.data}});
-  res.json({"status":"Added"});
-})
-
-//get all the responses by form_id test
-router.get('/get/responses/:formId', (req,res)=>{
-
-    const formId = req.params.formId;
-    fetch(`http://localhost:8000/forms/form_info/${formId}`).then(response => {
+router.get('/get/responses/:formId', verify,(req,res)=>{
+    const formId = req.query.formId;
+    logger.debug(`getting responses of formId : ${formId}`);
+    fetch(apiUtils.createUrl(config.FORM_SERVICE_BASE_URL,`/forms/form_info/${formId}`)).then(response => {
       if(response.ok){
+        logger.debug('form info fetched');
         response.json().then(data => {
           const fields = data['template']['field']['field_label'];
           respSchema.aggregate([
@@ -69,6 +67,7 @@ router.get('/get/responses/:formId', (req,res)=>{
           ]).exec((err,responses) => {
             if(err===null){
             let selected_responses = [];
+            logger.error('filter responses')
             responses.map(response => {
               let labels = [];
               response.sections.map(section => {
@@ -83,13 +82,15 @@ router.get('/get/responses/:formId', (req,res)=>{
             res.json({"responseArray":selected_responses});
           }
           else{
-            res.status(500).json({'Status':'Internal Server Error'})
+            logger.error(`filteration not done due to ${err}`);
+            res.status(HttpStatus.INTERNAL_SERVER_ERROR).json(apiUtils.getError('not able to fetch responses :: '+err, HttpStatus.INTERNAL_SERVER_ERROR))
           }
           })
         })
-      }else if(response.status===404){
-        res.status(404).json({'Status':'Not Found Error'})
+      }else{
+        res.status(HttpStatus.NOT_FOUND).json(apiUtils.getResponse('form template not found',HttpStatus.NOT_FOUND))
       }
     })
   })
   
+module.exports = router;
